Ensure contrast on selection

--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -9,9 +9,13 @@ body {
   }
 
   *::selection {
-    background-color: $colour--selection;
+    background-color: darken($colour--accent, 20%);
     color: $colour--light;
   }
+}
+
+body.dark *::selection {
+  background-color: darken($colour--accent, 5%);
 }
 
 a {
