--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,8 +10,6 @@ $colour--dark: #0a0a0b;
 
 $colour--accent: #fe5f55;
 
-$colour--selection: $colour--accent;
-
 $type--base-size: 16pt;
 
 $type--base-line-height: 1.5;
